--- a/security/register.html
+++ b/security/register.html
@@ -16,7 +16,7 @@
 
     <h1>REGISTER</h1>
 
-    <form action="index.php?ctrl=security&action=register" method="post">
+    <form action="/index.php?ctrl=security&action=register" method="post">
         <div> 
             <p>
                 <label>username</label>
@@ -24,15 +24,15 @@
             </p>
             <p>
                 <label>email</label>
-                <input type='text' name='email'>
+                <input type='email' name='email'>
             </p>
             <p>
                 <label>password</label>
-                <input type='text' name='password'>
+                <input type='password' name='password' placeholder="at least 8 characters">
             </p>
             <p>
                 <label>confirm password</label>
-                <input type='text' name='password2'>
+                <input type='password' name='password2'>
             </p>
             <p>
                 <input type='submit' name='submit' value="sign up!">
