--- a/security/login.html
+++ b/security/login.html
@@ -26,7 +26,7 @@
             <input type='password' name='password'>
         </p>
         <p>
-            <input type='submit' name='submit' value="sign up!">
+            <input type='submit' name='submit' value="sign in!">
         </p>
     </div>
 </form>
