--- a/security/login.html
+++ b/security/login.html
@@ -13,24 +13,25 @@
     <title>FORUM</title>
 </head>
 <body>
-<h1>LOGIN</h1>
+    <div class="logForm">   
+        <h1>LOGIN</h1>
 
-<form action="/index.php?ctrl=security&action=login" method="post">
-    <div> 
-        <p>
-            <label>email</label>
-            <input type='email' name='email'>
-        </p>
-        <p>
-            <label>password</label>
-            <input type='password' name='password'>
-        </p>
-        <p>
-            <input type='submit' name='submit' value="sign in!">
-        </p>
-    </div>
-</form>
-
+        <form action="/index.php?ctrl=security&action=login" method="post">
+                <div> 
+                    <p>
+                        <label>email</label>
+                        <input type='email' name='email'>
+                    </p>
+                    <p>
+                        <label>password</label>
+                        <input type='password' name='password'>
+                    </p>
+                    <p>
+                        <input type='submit' name='submit' value="sign in!">
+                    </p>
+                </div>
+        </form>
+    </div> 
 </body>
 
 </html>
