--- a/security/register.html
+++ b/security/register.html
@@ -14,32 +14,35 @@
 </head>
 <body>
 
-    <h1>REGISTER</h1>
+    <div class='logForm'>
 
-    <form action="/index.php?ctrl=security&action=register" method="post">
-        <div> 
-            <p>
-                <label>username</label>
-                <input type='text' name='username'>
-            </p>
-            <p>
-                <label>email</label>
-                <input type='email' name='email'>
-            </p>
-            <p>
-                <label>password</label>
-                <input type='password' name='password' placeholder="at least 8 characters">
-            </p>
-            <p>
-                <label>confirm password</label>
-                <input type='password' name='password2'>
-            </p>
-            <p>
-                <input type='submit' name='submit' value="sign up!">
-            </p>
-        </div>
-    </form>
+        <h1>REGISTER</h1>
 
+        <form action="/index.php?ctrl=security&action=register" method="post">
+            <div> 
+                <p>
+                    <label>username</label>
+                    <input type='text' name='username'>
+                </p>
+                <p>
+                    <label>email</label>
+                    <input type='email' name='email'>
+                </p>
+                <p>
+                    <label>password</label>
+                    <input type='password' name='password' placeholder="at least 8 characters">
+                </p>
+                <p>
+                    <label>confirm password</label>
+                    <input type='password' name='password2'>
+                </p>
+                <p>
+                    <input type='submit' name='submit' value="sign up!">
+                </p>
+            </div>
+        </form>
+    </div>
+    
 </body>
 
 </html>
